--- a/src/images/redux/package.json
+++ b/src/images/redux/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app",
+  "name": "redux",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,22 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@formspree/react": "^2.5.1",
-    "@reduxjs/toolkit": "^1.9.7",
-    "axios": "^1.5.1",
-    "bootstrap": "^5.3.2",
-    "firebase": "^10.5.0",
-    "formik": "^2.4.5",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
-    "react-router-dom": "^6.16.0",
-    "react-toastify": "^9.1.3",
-    "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2",
-    "yup": "^1.3.2"
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -35,7 +23,6 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "tailwindcss": "^3.3.3",
     "vite": "^4.4.5"
   }
 }
